Rpg1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> todo
Rule 1     todo -> expression
Rule 2     todo -> empty
Rule 3     empty -> <empty>
Rule 4     expression -> NAME
Rule 5     expression -> JUGADOR
Rule 6     expression -> LLAVE
Rule 7     expression -> PUERTA

Terminals, with rules where they appear

JUGADOR              : 5
LLAVE                : 6
NAME                 : 4
PUERTA               : 7
error                : 

Nonterminals, with rules where they appear

empty                : 2
expression           : 1
todo                 : 0

Parsing method: LALR

state 0

    (0) S' -> . todo
    (1) todo -> . expression
    (2) todo -> . empty
    (4) expression -> . NAME
    (5) expression -> . JUGADOR
    (6) expression -> . LLAVE
    (7) expression -> . PUERTA
    (3) empty -> .

    NAME            shift and go to state 4
    JUGADOR         shift and go to state 5
    LLAVE           shift and go to state 6
    PUERTA          shift and go to state 7
    $end            reduce using rule 3 (empty -> .)

    todo                           shift and go to state 1
    expression                     shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> todo .



state 2

    (1) todo -> expression .

    $end            reduce using rule 1 (todo -> expression .)


state 3

    (2) todo -> empty .

    $end            reduce using rule 2 (todo -> empty .)


state 4

    (4) expression -> NAME .

    $end            reduce using rule 4 (expression -> NAME .)


state 5

    (5) expression -> JUGADOR .

    $end            reduce using rule 5 (expression -> JUGADOR .)


state 6

    (6) expression -> LLAVE .

    $end            reduce using rule 6 (expression -> LLAVE .)


state 7

    (7) expression -> PUERTA .

    $end            reduce using rule 7 (expression -> PUERTA .)

